--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --bg-primary: #333;
+    --color-primary: #eee;
+}
+
 html {
     box-sizing: border-box;
     font-size: 62.5%;
@@ -12,12 +17,25 @@ html {
 body {
     font-size: 1.6rem;
     margin: 0;
+    background-color: var(--bg-primary);
+    color: var(--color-primary);
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 100dvh;
     width: 100dvw;
 }
 
 main {
     flex: 1;
+}
+
+.textAlign-right {
+    text-align: right;
+}
+
+#display,
+#calculator {
+    padding: 0.6rem;
+    outline: 0.1rem solid var(--color-primary);
 }
