--- a/style.css
+++ b/style.css
@@ -36,8 +36,15 @@ main {
 
 #display,
 #calculator {
-    padding: 0.6rem;
-    outline: 0.1rem solid var(--color-primary);
+    padding: 1rem;
+    border: 0.1rem solid var(--color-primary);
+    border-radius: 1rem;
+    background-color: black;
+}
+
+#display {
+    font-size: 2.4rem;
+    font-weight: bold;
 }
 
 #calculator button {
@@ -46,5 +53,8 @@ main {
     font-size: 1.8rem;
     font-weight: bold;
     margin: 0.2rem;
-    border-radius: 1rem;
+    border: none;
+    color: white;
+    border-radius: 50%;
+    background: #222;
 }
