--- a/style.css
+++ b/style.css
@@ -24,24 +24,29 @@ main {
 }
 
 #calculator {
+    width: 30rem;
+    aspect-ratio: 1;
     border: 1px solid gray;
     border-radius: 5px;
     padding: 5px;
     background-color: lightgray;
-    width: 200px;
     box-shadow: 3px 3px 3px lightgray;
 }
 
 #calculatorDisplay {
     background-color: white;
+    height: 53.5px;
     border: 1px solid gray;
     border-radius: 5px;
     text-align: right;
-    padding: 5px;
+    padding: 5px 8px;
     margin-bottom: 5px;
+    font-size: xx-large;
+    overflow-y: scroll;
 }
 
 #calculatorButtons {
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
@@ -51,6 +56,7 @@ main {
     width: 25%;
     border-radius: 5px;
     background-color: lightgray;
+    font-size: large;
 }
 
 #calculatorButtons>button[data-value='C'],
