--- a/style.css
+++ b/style.css
@@ -38,10 +38,35 @@ main {
     background-color: var(--bg);
     color: var(--txt);
     width: 30rem;
-    border: 0.1rem solid gray;
-    border-radius: 0.5rem;
+    border: 0.5rem solid var(--bg-dark);
+    border-radius: 0.7rem;
+    overflow: hidden;
     padding: 0.5rem;
-    box-shadow: 0.3rem 0.3rem 0.3rem lightgray;
+    box-shadow: 0.3rem 0.3rem 0.3rem var(--bg);
+}
+
+#calculatorHeader {
+    display: flex;
+    margin-bottom: 0.5rem;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#solar {
+    overflow: hidden;
+    border-radius: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 0.2rem;
+    height: 4rem;
+    width: 40%;
+    background-color: var(--bg-light);
+    border: 0.2rem solid var(--txt-muted);
+}
+
+#solar>div {
+    flex: 1;
+    background-color: peru;
 }
 
 #calculatorDisplay {
